fix: focus style for dark mode

--- a/client/src/assets/styles/_form.scss
+++ b/client/src/assets/styles/_form.scss
@@ -97,9 +97,8 @@
         background: none;
         border: none;
 
-        &:focus,
-        &:active {
-          outline: 3px solid theme-color("dark");
+        &:focus {
+          outline: 3px solid theme-color("primary-yellow");
         }
 
         @include media-breakpoint-down(lg) {
