--- a/client/src/pages/calendar-page/_calendar-page.scss
+++ b/client/src/pages/calendar-page/_calendar-page.scss
@@ -113,7 +113,7 @@
       }
 
       &:focus {
-        outline: 3px solid theme-color("dark");
+        outline: 3px solid theme-color("primary-yellow");
       }
 
       .fc-icon {
